--- a/prgit.html
+++ b/prgit.html
@@ -1,1 +1,40 @@
-primer commit
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Venta de tortas</title>
+</head>
+<body>
+    <h1>Miletortas</h1>
+    <div>
+        <h2>Estamos esperando tus solicitudes</h2>
+    </div>
+    <form>
+        <fieldset>
+            <legend>Inicia sesión</legend>
+            <label>Usuario</label>
+            <br/>
+            <input type="text" name="Usuario">
+            <br/>
+            <label>Contraseña</label>
+            <br/>
+            <input type="contraseña" name="contraseña">
+            <br/>
+            <input type="button" value="ingresar">
+        </fieldset>
+    </form>
+    <form>
+        <fieldset>
+            <legend>Calificanos</legend>
+            <label>servicio</label>
+            <div>
+                <select>
+                    
+                </select>
+            </div>
+        </fieldset>
+    </form>
+</body>
+</html>
