--- a/prgit.html
+++ b/prgit.html
@@ -31,7 +31,9 @@
             <label>servicio</label>
             <div>
                 <select>
-                    
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
                 </select>
             </div>
         </fieldset>
